--- a/app/views/mensajes/_mensajes.html.erb
+++ b/app/views/mensajes/_mensajes.html.erb
@@ -1,5 +1,5 @@
-<div id="messages" class="mensajes">
-  <div id="messages-table" class="mensajes-tabla">
+<div id="mensajes" class="mensajes">
+  <div id="mensajes-tabla" class="mensajes-tabla">
     <% if @mensajes.any? %>
       <%= render @mensajes %>
     <% end %>
